--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@mui/x-data-grid": "^6.19.6",
     "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
