--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.19.6",
     "axios": "^1.6.7",
     "next": "14.1.0",
+    "pdfmake": "^0.2.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
