--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.6",
     "axios": "^1.6.7",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "pdfmake": "^0.2.10",
     "react": "^18",
     "react-dom": "^18",
