--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
