--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/material": "^5.16.7",
     "@mui/x-charts": "^7.12.1",
     "@mui/x-data-grid": "^6.19.6",
+    "@types/papaparse": "^5.3.14",
     "axios": "^1.6.7",
     "next": "^14.2.5",
+    "papaparse": "^5.4.1",
     "pdfmake": "^0.2.10",
     "react": "^18",
     "react-dom": "^18",
